# HJGraphics

./: .gitignore  BasicGLObject.h  CMakeLists.txt  Camera.h  DebugUtility.h  ElementObjects.cpp  GLFWWindowObject.cpp  GLFWWindowObject.h  LICENSE  Light.h  Model.cpp  Model.h  PBRDemo.cpp  Scene.h  Shader.cpp  Shader.h  main.cpp  nanoSuitDemo.cpp  readme.md  todo.md
HJGraphics-Qt/: BasicGLObject.h  Camera.h  DebugUtility.h  ElementObjects.cpp  HJGWidget.cpp  HJGWidget.h  HJGraphics-Qt.pro  OpenGLHeader.h  Scene.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Includes/: GLFWWindowObject.h  HJGraphics.h  Light.h  Material.h  Model.h  OpenGLHeader.h  Scene.h  Shader.h  Window.h
Includes/glad/: readme.md
Shaders/: coordFragment.glsl  geometryFragment.glsl  geometryLightVertex.glsl  geometryParallelLightFragment.glsl  geometryPointLightFragment.glsl  geometryShadowVertex.glsl  geometrySpotLightFragment.glsl  geometryVertex.glsl  gridFragment.glsl  skyboxFragment.glsl
Sources/: CMakeLists.txt  Camera.cpp  Camera.h  DebugUtility.cpp  DebugUtility.h  ElementObjects.cpp  ElementObjects.h  GLFWWindowObject.cpp  GLFWWindowObject.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Scene.cpp  Scene.h  Shader.h  Window.cpp  Window.h  glad.c
config/: config.json
example/: CMakeLists.txt  ECSIntegrationTest.cpp  PBRDemo.cpp
include/: Animater.h  BasicGLObject.h  Camera.h  Common.h  Config.h  CustomMesh.h  DebugUtility.h  DeferredRenderer.h  ElementObjects.h  FrameBuffer.h  GBuffer.h  GLFWWindowObject.h  GLFWWrap.h  IBLManager.h  Light.h  Log.h  Material.h  MathUtility.h  Mesh.h  Model.h  OpenGLCache.h  OpenGLHeader.h  PBRUtility.h  Quad.h  Renderable.h  SSAO.h  Scene.h  Scene2.h  SceneEntity.h  Shader.h  ShadowMap.h  Shape.h  TextRenderer.h  Texture.h  Utility.h  Vertex.h  Window.h
include/ECS/: Component.h  ECSScene.h  Entity.h  System.h
include/component/: AnimationComponent.h  CameraComponent.h  LightComponent.h  MeshComponent.h  ModelAndMesh.md  TransformComponent.h
include/prefab/: CameraPrefab.h  CustomModelPrefab.h  LightPrefab.h  ModelPrefab.h  ShapePrefab.h  SkyboxPrefab.h
include/system/: AnimationSystem.h  CameraSystem.h  LightSystem.h  MeshRenderSystem.h  TransformSystem.h
lib/: libfreetype.6.dylib  libglfw.3.dylib
lib/mac/: libIrrXML.dylib  libassimp.5.dylib  libfreetype.6.dylib  libglfw.3.3.dylib
lib/win64/: assimp-vc141-mt.exp
model/FireExt/: FireExt.mtl
model/Glock/: Glock.mtl
shader/: framebufferFragment.glsl  geometryAmbientFragment.glsl  geometryLightVertex.glsl  geometryParallelLightFragment.glsl  geometryPointLightFragment.glsl  geometrySpotLightFragment.glsl  gridFragment.glsl  skyboxFragment.glsl
shader/deferred/: debug.fs.glsl  debug.vs.glsl  gBuffer.fs.glsl  gBuffer.vs.glsl  gBuffer_binding.h  post.fs.glsl  post.vs.glsl  shade.ambient.fs.glsl  shade.fs.glsl  shade.parallel.fs.glsl  shade.point.fs.glsl  shade.spot.fs.glsl  shade.vs.glsl  shadow.fs.glsl  shadow.point.fs.glsl  shadow.point.gs.glsl  shadow.vs.glsl  ssao.fs.glsl  ssao.vs.glsl  ssaoBlur.fs.glsl
shader/deferred/AO/: ssao.fs.glsl
shader/deferred/PBR/: PBR_Common.glsl  PBR_DiffuseIrradiance.fs.glsl  PBR_IBL.fs.glsl  PBR_SpecularPrefiltered.fs.glsl  PBR_SpecularPrefiltered.vs.glsl  PBR_Tex2DToCubeMap.fs.glsl  PBR_gBuffer.fs.glsl  PBR_lighting.fs.glsl
shader/deferred/VFX/: chromaticAberration.glsl  depthOfField.fs.glsl  multiFilter.fs.glsl  post.fs.glsl  ssr.fs.glsl  ssr.vs.glsl  ssrRef.fs.glsl
shader/deferred/common/: shadeCommon.glsl  shadeCommonDev.glsl  shadowCalculate.glsl
shader/forward/: [outdated]geometryFragment.glsl  [outdated]geometryVertex.glsl  debugFragment.glsl  framebufferFragment.glsl  framebufferVertex.glsl  geometryAmbientFragment.glsl  geometryAmbientVertex.glsl  geometryLightVertex.glsl  geometryParallelLightFragment.glsl  geometryPointLightFragment.glsl  geometryPointShadowFragment.glsl  geometryPointShadowGeometry.glsl  geometryPointShadowVertex.glsl  geometryShadowVertex.glsl  geometrySpotLightFragment.glsl  gizmo.fs.glsl  gizmo.vs.glsl  grid.fs.glsl  grid.vs.glsl  gridVertex.glsl  line.fs.glsl  line.vs.glsl  lineVertex.glsl  skybox.fs.glsl  skybox.vs.glsl  skyboxVertex.glsl
shader/text/: text.fs.glsl  text.vs.glsl
src/: Animater.cpp  BasicGLObject.cpp  Camera.cpp  Config.cpp  CustomMesh.cpp  DebugUtility.cpp  DeferredRenderer.cpp  DeferredRendererTest.cpp  ElementObjects.cpp  FrameBuffer.cpp  GBuffer.cpp  GLFWWindowObject.cpp  GLFWWrap.cpp  IBLManager.cpp  Light.cpp  Material.cpp  MathUtility.cpp  Mesh.cpp  Model.cpp  OpenGLCache.cpp  PBRUtility.cpp  Quad.cpp  Renderable.cpp  SSAO.cpp  Scene.cpp  Scene2.cpp  SceneEntity.cpp  Shader.cpp  ShadowMap.cpp  Shape.cpp  TextRenderer.cpp  Texture.cpp  Utility.cpp  Window.cpp
src/ECS/: Component.cpp  ECS.md  ECSScene.cpp  Entity.cpp  todo.md
src/ECS/unit-test/: CMakeLists.txt  test.cpp
src/prefab/: CameraPrefab.cpp  CustomModelPrefab.cpp  LightPrefab.cpp  ModelPrefab.cpp  ShapePrefab.cpp  SkyboxPrefab.cpp
src/system/: AnimationSystem.cpp  CameraSystem.cpp  LightSystem.cpp  MeshRenderSystem.cpp  TransformSystem.cpp
texture/envmap_miramar/: miramar_bk.tga  miramar_dn.tga  miramar_ft.tga  miramar_lf.tga  miramar_rt.tga
